--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Lucas Estrela - Resume/CV</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <title>Lucas Estrela - Resume</title>
+        <!--         
+            <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+         -->
         <!-- Font Awesome icons (free version) -->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -44,12 +46,12 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Hi,
-                        <span class="text-primary">Musiversal!</span>
+                        Hi, I'm 
+                        <span class="text-primary">Lucas Estrela</span>
                     </h1>
-                    <h2 class="mb-0"> I'm Lucas Estrela</h2>
                     <div class="subheading mb-5">
                         São Paulo, Brazil · +55 11 92010 4510 · lucasestrela1@gmail.com 
+                        <br>
                         <br>
                         <a class="text-primary" href="https://youtu.be/9W_da1F4zPQ" target="_blank">Link to my Video Portfolio</a>
                         <br>
@@ -58,13 +60,8 @@
                     <p class="lead mb-5">If you are looking for a multi-skilled creative professional, with a background in both <strong>artistic and corporate work</strong>, here I am.
                         <br>
                         <br>
-                        I was born in Belém, a city in the north of Brazil, right in the middle of the Amazon rainforest. I've been living in São Paulo since 2013 
-                        and working for almost 15 years as videographer, video editor, music producer and multimedia artist.
+                        I was born in Belém, a city in the north of Brazil, right in the middle of the Amazon rainforest and I've been living in São Paulo since 2013, working for almost 15 years as videomaker, video editor, music producer and multimedia artist.
                         <br>
-                        <br>
-                        Now I am looking for new creative challenges, and for sure, Musiversal is the best place for it. 
-                        With the high-quality service provided by Musiversal and a life-changing experience for many people around the world, 
-                        I know I'll be doing what I really love — contributing to a community that continues to grow and to a music startup I truly believe in, created by musicians and for musicians.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.instagram.com/lucas.estrela/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -86,7 +83,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Freelancer</h3>
-                            <div class="subheading mb-3">Multimedia Artist, Videographer and Music Producer </div>
+                            <div class="subheading mb-3">Videomaker and Multimedia Artist</div>
                             <div class="subheading mb-3"></div>
                             <p>· Conceptualizing and creating multimedia art pieces that blends visuals, audio, technology and interactive elements. <br>
                                 · Filming and carefully editing videos to shape captivating narratives, using well-planned cuts, transitions, effects and motion graphics.<br>
@@ -100,7 +97,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">EMESP Tom Jobim - São Paulo State Music School <span class="text-primary subheading">· São Paulo, Brazil</span></h3>
-                            <div class="subheading mb-3">Video Editor, filmmaker and recording egineer</div>
+                            <div class="subheading mb-3">Videomaker, Video Editor and Recording Studio Manager</div>
                             <div class="subheading mb-3"></div>
                             <div class="text-primary">Responsabilities</div>
                                 <p>
@@ -128,7 +125,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Greenvision Films  <span class="text-primary subheading">· Belém, Brazil</span></h3>
-                            <div class="subheading mb-3">Video Editor and Videomaker</div>
+                            <div class="subheading mb-3">Video Editor</div>
                             <div class="text-primary">Responsabilities</div>
                                 <p>
                                 · Edited music videos and documentaries, synchronizing visuals, audio and effects to convey compelling narratives. <br>
@@ -230,9 +227,9 @@
                                 <div class="subheading mb-2 text-primary">Languages</div>
                                 <ul class="fa-ul mb-0">
                                     <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Portuguese:</strong> Fluent/Native</li>
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>English:</strong> Advanced reading and Intermediate conversation</li>
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Spanish:</strong> Advanced reading and Intermediate conversation</li>
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>French:</strong> Basic reading and Begginer conversation</li>
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>English:</strong> Advanced reading, writing and conversation</li>
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Spanish:</strong> Advanced reading and Intermediate writing and conversation</li>
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>French:</strong> Basic reading</li>
                                 </ul>
                             </div>
                         </section>
@@ -247,16 +244,17 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <strong>· Video Production:</strong><br>
-                            &nbsp; &nbsp; Final Cut Pro, Adobe Premiere Pro, Adobe After Effects and Kdenlive
-                        </li>
-                        <li>
-                            <strong>· Music production:</strong><br>
-                            &nbsp; &nbsp; Logic Pro X, Avid Pro Tools, Ableton Live and Reaper
+                            &nbsp; &nbsp; Adobe Premiere Pro, Adobe After Effects and Final Cut Pro
                         </li>
                         <li>
                             <strong>· Graphic Design:</strong><br>
-                            &nbsp; &nbsp; Adobe Photoshop, Adobe Illustrator, Figma and Inkscape
+                            &nbsp; &nbsp; Adobe Photoshop and Figma
                         </li>
+                        <li>
+                            <strong>· Music and Audio Production:</strong><br>
+                            &nbsp; &nbsp; Logic Pro X, Avid Pro Tools and Adobe Audition
+                        </li>
+
                         <li>
                             <strong>· 3D Modeling and Printing:</strong><br>
                             &nbsp; &nbsp; Autodesk Fusion 360, Ultimaker Cura and Ender 3D Printers
@@ -276,10 +274,6 @@
                     <div class="subheading mb-1 text-primary">Other Softwares and Technologies I am begginer</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <strong>· Music Notation:</strong><br>
-                            &nbsp; &nbsp; Sibelius
-                        </li>
-                        <li>
                             <strong>· Web Design and Programming:</strong><br>
                             &nbsp; &nbsp; HTML, CSS, JavaScript, React, Wordpress, Arduino and Raspberry Pi
                         </li>
@@ -288,19 +282,15 @@
                     <br>
                     <div class="subheading mb-1 text-primary">Equipment</div>
                     <ul class="fa-ul mb-0">
-                        <li>Camera Canon EOS 600D with 50mm and 70-300mm lenses
+                        <li>Camera Canon EOS 600D with 50mm and 70-300mm lens
                         </li>
-                        <li>Camera GoPro Hero 8 black and Hero 2 
+                        <li>Camera GoPro Hero 8 Black
                         </li>
                         <li>Camera Mi Sphere 360º camera
                         </li>
                         <li>Basic drone for aerial photography and video
                         </li>
-                        <li>Microphone Rode Videomic Go
-                        </li>
-                        <li>Microphone Boya Lavalier Wireless 
-                        </li>
-                        <li>iPhone 12 with lens kit and lavalier wireless mic for video recordings
+                        <li>Microphones Rode Videomic Go, Lavalier Wireless and Shure SM58
                         </li>
                         <li>Video Editing Workstation - Apple Mac Mini 2018 - Core i5 / 32gb ram / 1Tb SSD
                         </li>
@@ -316,7 +306,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-4">Interests</h2>
-                    <p class="mb-3">I have also dedicated myself to developing personal projects and conducting research involving 3D printing with recycled plastic, woodworking, electronics and programming using open-source software.</p>
+                    <p class="mb-3">I have also dedicated myself to developing personal projects and conducting research involving 3D printing with recycled plastic, electronics and programming.</p>
                     <p class="mb-3">I have had the opportunity to present works in both individual and collective exhibitions. Among these personal projects, I must highlight:
                         <br><strong>·</strong> "Arboreal" (2015): An independent medium-length film of "soundscapes" where I was responsible for producing, filming, editing, composing the soundtrack, and building my own musical instruments for live performances. 
                         Over the course of three years, I had the privilege of showcasing this work at experimental music festivals and sound art exhibitions in Belém, São Paulo, and Fortaleza. 
@@ -328,7 +318,7 @@
                         <p><strong>·</strong> Electronic Music Albums: I am equally proud of my two electronic music albums, "Sal ou Moscou" (2016) and "Farol" (2017), 
                             which are available on all platforms. <a class="text-primary" href="https://youtu.be/nNAD2DPoRl0" target="_blank">Link to Farol on YouTube</a>
                             </p>
-                        <p>Apart from my involvement in the arts, I find leisure in playing tennis in my free time.</p>
+                        <p>Apart from my involvement in the arts, I also play tennis in my free time.</p>
                     </p>
                 </div>
             </section>
