--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                         São Paulo, Brazil · +55 11 92010 4510 · lucasestrela1@gmail.com 
                         <br>
                         <br>
-                        <a class="text-primary" href="https://youtu.be/9W_da1F4zPQ" target="_blank">Link to my Video Portfolio</a>
+                        · <a class="text-primary" href="https://youtu.be/9W_da1F4zPQ" target="_blank">Link to my Videomaker/Video Editor Portfolio</a>
                         <br>
-                        <a class="text-primary" href="https://drive.google.com/file/d/1oZPReVPC_4PGwkcxx_Ff9vJhDB_oSpIG/view?usp=sharing" target="_blank">Link to my Resume in pdf</a>
+                        · <a class="text-primary" href="https://drive.google.com/drive/folders/1CcfwB1C0a3kg1UT7Uz3EVRYatjIxTENE?usp=sharing" target="_blank">Short-Form Videos Portfolio</a>
+                        <br>
+                        · <a class="text-primary" href="https://drive.google.com/file/d/1oZPReVPC_4PGwkcxx_Ff9vJhDB_oSpIG/view?usp=sharing" target="_blank">Resume/CV in Pdf</a>
                     </div>
                     <p class="lead mb-5">If you are looking for a multi-skilled creative professional, with a background in both <strong>artistic and corporate work</strong>, here I am.
                         <br>
